@@ -11,3 +11,5 @@ by (rtac conjI 1);
 by (assume_tac 1);
 by (assume_tac 1);
 qed "and_comms";
+
+Goal "P(x) --> Q(x)";
